# python-reservoir

./: .gitignore  MANIFEST.in  Pipfile  README.md  setup.cfg
.circleci/: config.yml
docs/: timeseries_prediction_demo.html  timeseries_prediction_demo.ipynb
pyres/: __init__.py
pyres/ESN/: ESN.py  __init__.py
pyres/ESN/tests/: test_esn.py
pyres/datasets/: __init__.py  base.py
pyres/utils/: __init__.py  utils.py
