[metadata]
name = python-reservoir
version = attr: pyres.__version__
author = Hiromasa Sakaguchi
author-email = sakaguchi@cmpledge.com
description = {python-reservoir is a python package for reservoir computing framework}

[options]
zip_safe = False
include_package_data = true
install_requires =
    numpy
    scipy    
    scikit-learn

packages = find: